--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p class="red">Courses Starting from JUNE 4, 2024</p>
                     <p class="red">Validity: June 19, 2025</p>
                     <div class="btn-container">
-                        <a href="#" class="btn enroll">ENROLL NOW</a>
+                        <a href="#" class="btn enroll">Thanks for Subscribed</a>
                         <a href="#" class="btn watch">WATCH COURSE</a>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                     <p class="red">Courses Starting from JUNE 4, 2024</p>
                     <p class="red">Validity: September 19, 2024</p>
                     <div class="btn-container">
-                        <a href="#" class="btn enroll">ENROLL NOW</a>
+                        <a href="#" class="btn enroll">Thanks for Subscribed</a>
                         <a href="#" class="btn watch">WATCH COURSE</a>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                     <p class="red">Courses Starting from JUNE 4, 2024</p>
                     <p class="red">Validity: December 19, 2024</p>
                     <div class="btn-container">
-                        <a href="#" class="btn enroll">ENROLL NOW</a>
+                        <a href="#" class="btn enroll">Thanks for Subscribed</a>
                         <a href="#" class="btn watch">WATCH COURSE</a>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                     <p class="red">Courses Starting from JUNE 4, 2024</p>
                     <p class="red">Validity: October 19, 2024</p>
                     <div class="btn-container">
-                        <a href="#" class="btn enroll">ENROLL NOW</a>
+                        <a href="#" class="btn enroll">Thanks for Subscribed</a>
                         <a href="#" class="btn watch">WATCH COURSE</a>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                     <p class="red">Courses Starting from JUNE 4, 2024</p>
                     <p class="red">Validity: August 19, 2024</p>
                     <div class="btn-container">
-                        <a href="#" class="btn enroll">ENROLL NOW</a>
+                        <a href="#" class="btn enroll">Thanks for Subscribed</a>
                         <a href="#" class="btn watch">WATCH COURSE</a>
                     </div>
                 </div>
