--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="sub_container">
             <div class="part_1">
                 <div>
-                <img src="images/pic-3.png" alt="learner-img">
+                <img src="pic-3.png" alt="learner-img">
                 <hr id="hr">
                 </div>
                 <div class="list">
@@ -35,7 +35,7 @@
         <div class="main_content">
             <div class="course-container">
                 <div class="course-image">
-                    <img src="images/thumbnail.webp" alt="Course Image">
+                    <img src="thumbnail.webp" alt="Course Image">
                 </div>
                 <div class="course-details">
                     <div class="course-header">
@@ -56,7 +56,7 @@
             </div>
             <div class="course-container">
                 <div class="course-image">
-                    <img src="images/thumbnail.webp" alt="Course Image">
+                    <img src="thumbnail.webp" alt="Course Image">
                 </div>
                 <div class="course-details">
                     <div class="course-header">
@@ -77,7 +77,7 @@
             </div>
             <div class="course-container">
                 <div class="course-image">
-                    <img src="images/thumbnail.webp" alt="Course Image">
+                    <img src="thumbnail.webp" alt="Course Image">
                 </div>
                 <div class="course-details">
                     <div class="course-header">
@@ -98,7 +98,7 @@
             </div>
             <div class="course-container">
                 <div class="course-image">
-                    <img src="images/thumbnail.webp" alt="Course Image">
+                    <img src="thumbnail.webp" alt="Course Image">
                 </div>
                 <div class="course-details">
                     <div class="course-header">
@@ -119,7 +119,7 @@
             </div>
             <div class="course-container">
                 <div class="course-image">
-                    <img src="images/thumbnail.webp" alt="Course Image">
+                    <img src="thumbnail.webp" alt="Course Image">
                 </div>
                 <div class="course-details">
                     <div class="course-header">
